# ark-circom

./: Cargo.toml
examples/circom/: Cargo.toml  hello.r1cs  hello.wasm
examples/circom/src/: main.rs
src/circom/: builder.rs
src/witness/: witness_calculator.rs
