[package]
name = "circom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.3.0"
ark-circom = { path = "../../", features = ["circom-2"] }
ark-groth16 = "0.3.0"
ark-std = "0.3.0"
color-eyre = "0.6.2"
